--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py34, py35, py36, py36-dev, py37, pypy, lint
+envlist = py26, py27, py34, py35, py36, py37-dev, py38-dev, pypy, lint
 skipsdist = True
 
 [testenv]
@@ -9,7 +9,7 @@ deps =
   -rrequirements_test.txt
   py26: unittest2
   py{26,27},pypy: mock
-  py{34,35,36,36-dev,37}: aiohttp
+  py{34,35,36,37-dev,38-dev}: aiohttp
 
 [testenv:lint]
 commands =
